--- a/code.ipynb
+++ b/code.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "C1831193_CW1_code.ipynb",
+      "name": "code.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
@@ -29,12 +29,7 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "CMT307 Applied Machine Learning\n",
-        "\n",
-        "Mostyn Wood - MSc Data Science and Analytics - C1831193"
-      ],
-      "metadata": {
+            "metadata": {
         "id": "cMGLkLV472FT"
       }
     },
@@ -46,17 +41,11 @@
         "In this question, you will develop machine learning models to **predict e-commerce visitors’ \n",
         "purchasing intention.**\n",
         "\n",
-        "The given dataset **Coursework_1_data.csv**, which can be downloaded \n",
-        "from Learning Central, contains shoppers’ online activity information including clickstream \n",
+        "The given dataset **data.csv**, contains shoppers’ online activity information including clickstream \n",
         "and session information data, where the last column Revenue represents visitors’ \n",
         "purchasing intention. \n",
         "\n",
-        "Your tasks will include **data exploration**, **data pre-processing**, **machine learning method selection and implementation**, and **model performance evaluation**. \n",
-        "\n",
-        "In \n",
-        "addition to aforementioned tasks, you will write a concise **report** (around 1000 words, \n",
-        "excluding tables and figures) to **summarise your work** and provide an **analysis and \n",
-        "discussion of the results.**"
+        "Your tasks will include **data exploration**, **data pre-processing**, **machine learning method selection and implementation**, and **model performance evaluation**. \n"
       ],
       "metadata": {
         "id": "wj8Ic3wo3bue"
